<resources>
    <string name="app_name">Download Music Player</string>

    <string name="ratting_name">Rating</string>

    <string name="action_voice_rec">Voice</string>

    <string name="network2_error2">Network is Error</string>
    <string name="load2_error2">Load Data Error</string>
    <string name="empty_error">Data Is Empty</string>

    <string name="error_video_streams_empty">The video %s has no streams.</string>
    <string name="error_video_streams">An error has occurred while retrieving video\'s streams.</string>
    <string name="error_get_video_desc">An error has occurred while retrieving video\'s description.</string>
    <string name="error_invalid_url">Invalid video URL: %s</string>

    <string name="download2_text2">Downloads</string>

    <string name="download_text2">Download</string>

    <string name="play2_text2">Play</string>

    <string name="license_text">CC License</string>

    <string name="download2_added2">Download already added</string>

    <string name="download_add_success">Add a download queue</string>

    <string name="download_video_success">Download Finish</string>
    <string name="finish_download">Download complete</string>
    <string name="error_download">Download error</string>

    <string name="parse2_url2">Parse URL ...</string>

    <string name="declare2_text2">Disclaimers</string>

    <string name="youtube2_search2">YouTube Search</string>
    <string name="soundcloud2_search2">SoundCloud Search</string>

    <string name="switch_ytb_search">Switch YouTube Search</string>
    <string name="switch_sc_search">Switch SoundCloud Search</string>

    <string name="disclaimer_text">MP3 Music Downloader Music is provided by "www.jamendo.com","http://www.freemusicarchive.net" All songs, available through this application, are intended only for your personal non-commercial use.You can visit Jamendo privacy policy https://devportal.jamendo.com/api_terms_of_use https://freemusicarchive.org/api App authorized to use Jamendo API. All tracks available is under CC license(author and license link properly mentioned for each song). You can find and contact authors on www.jamendo.com,https://freemusicarchive.org</string>
    <string name="disclaimers">Disclaimers</string>
    <string name="confirm_text">confirm</string>

    <string name="del_des2">Do you want to delete it?</string>
    <string name="ok_text">OK</string>
    <string name="cancel_text">Cancel</string>

    <string name="play_error">Play error</string>
    <string name="not_last">Not the last one</string>
    <string name="not_next">No next</string>

    <string name="permission_text_tips">Please open read and write disk permissions</string>

    <string name="facebook_app_id">2126711137570479</string>
    <string name="fb_login_protocol_scheme">fb2126711137570479</string>

    <string name="download2_rating2">For you to download a music, please give me five stars.</string>
    <string name="parse_url_failure">Parse URL failure !</string>

    <string name="share2_text2">Share</string>

    <string name="share2_content2">https://play.google.com/store/apps/details?id=%s Recommended Downloads</string>

    <string name="start_speech">Start speech</string>

    <string name="hot_text">Hot Song</string>
    <string name="pop_song">Pop Song</string>
    <string name="top_song">Top Song</string>
    <string name="new_song">New Song</string>

    <string name="home_text">Home</string>
    <string name="recom_text">Recommend</string>

    <string name="pop_text">pop</string>
    <string name="Electronic_text">Electronic</string>
    <string name="rock_text">Rock</string>
    <string name="ambient_text">Ambient</string>
    <string name="intrumental_text">Intrumental</string>
    <string name="hiphop_text">Hiphop</string>
    <string name="indie_text">Indie</string>
    <string name="jazz_text">Jazz</string>
    <string name="world_text">world</string>
    <string name="metal_text">Metal</string>
    <string name="experimental_text">Experimental</string>
    <string name="Chillout_text">Chillout</string>
    <string name="Dance_text">Dance</string>
    <string name="Country_text">Country</string>
    <string name="Classical_text">Classical</string>
    <string name="Reggae_text">Reggae</string>
    <string name="Lounge_text">Lounge</string>
    <string name="Techno_text">Techno</string>
    <string name="Trance_text">Trance</string>
    <string name="Punk_text">Punk</string>
    <string name="Folk_text">Folk</string>
    <string name="Rap_text">Rap</string>
    <string name="Triphop_text">Triphop</string>
    <string name="Rnb_text">Rnb</string>
    <string name="newage_text">newage</string>
    <string name="Dubstep_text">Dubstep</string>
    <string name="Acoustic_text">Acoustic</string>
    <string name="Blues_text">Blues</string>
    <string name="Funk_text">Funk</string>
    <string name="Disco_text">Disco</string>

    <string name="Piano">Piano</string>
    <string name="Bass">Bass</string>
    <string name="Drum">Drum</string>
    <string name="Electricguitar">Electricguitar</string>
    <string name="Computer">Computer</string>
    <string name="Acousticguitar">Acousticguitar</string>
    <string name="Keyboard">Keyboard</string>
    <string name="Synthesizer">Synthesizer</string>
    <string name="Violin">Violin</string>
    <string name="Flute">Flute</string>
    <string name="Organ">Organ</string>
    <string name="Viola">Viola</string>
    <string name="Cello">Cello</string>
    <string name="Saxophone">Saxophone</string>
    <string name="Classicalguitar">Classicalguitar</string>
    <string name="Accordion">Accordion</string>

    <string name="recommend_text">Hot &amp; New</string>
    <string name="top_download_text">Download Charts</string>
    <string name="top_listened_text">listened Charts</string>
    <string name="genre_text">Genres</string>
    <string name="instrument_text">Instrument</string>

    <string name="featuer_text">Featuer</string>
    <string name="recent_text">Recent</string>

    <string name="all_text">View All</string>

</resources>
