<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">

    <item android:id="@+id/action_download"
        android:title="@string/download2_text2"
        android:icon="@drawable/ic_file_download_7878_24dp"
        android:orderInCategory="1"
        app:showAsAction="ifRoom"
        />

    <item
        android:id="@+id/action_soundcloud"
        android:title="@string/soundcloud2_search2"
        android:orderInCategory="2"
        app:showAsAction="never"
        />

    <item android:id="@+id/action_share"
        android:title="@string/share2_text2"
        android:orderInCategory="3"
        app:showAsAction="never"
        />

    <item android:id="@+id/action_rating"
        android:title="@string/ratting_name"
        android:orderInCategory="4"
        app:showAsAction="never"
        />
</menu>