<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/content_linear"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/material2_white"
    android:paddingBottom="8dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/title_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:fontFamily="sans-serif-medium"
        android:gravity="center_vertical"
        android:singleLine="true"
        android:focusable="true"
        android:ellipsize="marquee"
        android:focusableInTouchMode="true"
        android:marqueeRepeatLimit="marquee_forever"
        android:minHeight="56dp"
        android:text="@string/download2_text2"
        android:textColor="@color/material2_black"
        android:textSize="16dp" />

    <View
        android:background="@color/divider_color"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"/>

    <LinearLayout
        android:id="@+id/download2_linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rect_selector"
        android:gravity="center_vertical"
        android:minHeight="48dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginEnd="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginStart="16dp"
            android:src="@drawable/ic_file_download_6060_24dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:fontFamily="sans-serif"
            android:text="@string/download_text2"
            android:textColor="#6a6a6a"
            android:textSize="16dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/play2_linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rect_selector"
        android:gravity="center_vertical"
        android:minHeight="48dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginEnd="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginStart="16dp"
            android:src="@drawable/ic_play_arrow_6060_24dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:fontFamily="sans-serif"
            android:text="@string/play2_text2"
            android:textColor="#6a6a6a"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/license2_linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rect_selector"
        android:gravity="center_vertical"
        android:minHeight="48dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginEnd="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginStart="16dp"
            android:src="@drawable/ic_cc_license" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:fontFamily="sans-serif"
            android:text="@string/license_text"
            android:textColor="#6a6a6a"
            android:textSize="16sp" />
    </LinearLayout>

    <FrameLayout
        android:id="@+id/ad2_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>


</LinearLayout>

    <LinearLayout
        android:background="#A6000000"
        android:id="@+id/parse_load_linear"
        android:gravity="center"
        android:visibility="gone"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <me.zhanghai.android.materialprogressbar.MaterialProgressBar
        android:layout_gravity="center"
        android:layout_width="50dp"
        android:layout_height="50dp" />

        <TextView
            android:layout_gravity="center"
            android:layout_marginTop="4dp"
            android:text="@string/parse2_url2"
            android:textSize="11sp"
            android:textColor="@color/material2_white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

</FrameLayout>
